# ggrs_plot_operator

./: .dockerignore  .gitignore  API_EXPLORATION_FINDINGS.md  BACKEND_SELECTION_GUIDE.md  BUILD.md  CI_FINAL.md  CLAUDE.md  CLEANUP_2025-01-07.md  COLOR_IMPLEMENTATION_TODO.md  CONTINUE.md  Cargo.toml  Cargo.toml.template  DEPLOYMENT_DEBUG.md  DOCKER_UPDATES.md  Dockerfile  IMPLEMENTATION_CACHE_MOVE.md  IMPLEMENTATION_COMPLETE.md  LEGEND_POSITIONING_LOGBOOK.md  PHASE_1_COMPLETE.md  PHASE_3_COMPLETE.md  README.md  REVIEW_REPORT.md  SESSION_2025-01-15.md  SESSION_2025-01-16_PAGES_DEBUG.md  SESSION_2025-01-18_PAGINATION_OPTIMIZATION.md  SESSION_2025-01-19_PAGINATION_FIX.md  SESSION_2025-01-22_LAYOUT_AND_ROTATION.md  SESSION_2025-01-22_TEXT_ELEMENTS.md  SESSION_2025-01-27_TICK_ROTATION.md  STATUS.md  TESTING_STATUS.md  TEST_LOCAL.md  TIMING_ANALYSIS.md  WEBGPU_INTEGRATION_PLAN.md  WORKFLOW_TEST_INSTRUCTIONS.md  build.rs  compare_chunk_sizes.sh  index.html  memory_summary.sh  memory_usage_backend_cpu.csv  (+22 more)
.claude/rules/: architecture.md  commands.md  data-flow.md  debugging.md  ggrs-integration.md  tercen-api.md
.claude/skills/review_code/: SKILL.md
.claude/skills/sync-test-binary/: instructions.md
.claude/skills/test-local-analysis/: instructions.md
.github/workflows/: ci.yml  release.yml  showcase.yml
docs/: 00_PROJECT_SUMMARY.md  01_ARCHITECTURE.md  02_IMPLEMENTATION_PLAN.md  03_GRPC_INTEGRATION.md  04_DOCKER_AND_CICD.md  05_DOCKER_CICD_SUMMARY.md  06_CONTEXT_DESIGN.md  07_RUST_CONTEXT_IMPL.md  08_SIMPLE_STREAMING_DESIGN.md  09_FINAL_DESIGN.md  10_IMPLEMENTATION_PHASES.md  11_RESULT_UPLOAD_IMPLEMENTATION.md  12_RELEASE_WORKFLOW.md  CODE_CLEANUP_ANALYSIS.md  FACETING_IMPLEMENTATION.md  GPU_BACKEND_MEMORY.md  HEATMAP_IMPLEMENTATION_PLAN.md  MEMORY_OPTIMIZATION.md  PHASE_8_RESULT_UPLOAD.md  README.md  SESSION_2025-01-05.md  SESSION_2025-01-07.md  SESSION_2025-01-08.md
protos/: tercen_model.proto
src/: computed_schema.json  config.rs  lib.rs  main.rs  main.rs.template  memprof.rs  pipeline.rs  working_step.json
src/bin_disabled/: explore_schemas.rs  test_api_exploration.rs  test_facet_counts.rs  test_stream_generator_v2.rs
src/ggrs_integration/: cached_stream_generator.rs  mod.rs  stream_generator.rs
src/operator_props/: mod.rs
src/tercen/: README.md  arrow_convert.rs  client.rs  color_processor.rs  colors.rs  data.rs  error.rs  facets.rs  logger.rs  mod.rs  operator_properties.rs  pages.rs  palettes.rs  properties.rs  result.rs  table.rs  table_convert.rs  tson_convert.rs
src/tercen/context/: base.rs  dev_context.rs  helpers.rs  mod.rs  production_context.rs
