[package]
name = "ggrs_plot_operator"
version = "0.0.1"
edition = "2021"
authors = ["Tercen"]
description = "High-performance faceted plotting operator using GGRS"
license = "MIT"

[lib]
name = "ggrs_plot_operator"
path = "src/main.rs"

[[bin]]
name = "ggrs_plot_operator"
path = "src/main.rs"

[[bin]]
name = "test_stream_generator"
path = "src/bin/test_stream_generator.rs"

# Disabled test binaries (outdated, need updating)
# [[bin]]
# name = "test_api_exploration"
# path = "src/bin/test_api_exploration.rs"
#
# [[bin]]
# name = "test_facet_counts"
# path = "src/bin/test_facet_counts.rs"
#
# [[bin]]
# name = "explore_schemas"
# path = "src/bin/explore_schemas.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = "0.1"
futures = "0.3"

# gRPC and Protocol Buffers
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
prost = "0.12"
prost-types = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Data parsing - TSON format from Tercen
rustson = { git = "https://github.com/tercen/rustson", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
polars = { version = "0.44", default-features = false, features = ["lazy", "dtype-full"] }

# Base64 encoding
base64 = "0.22"

# GGRS plotting library with WebGPU backend
# Cargo will automatically find ggrs-core in the ggrs workspace (crates/ggrs-core)
ggrs-core = { git = "https://github.com/tercen/ggrs", branch = "main", features = ["webgpu-backend", "cairo-backend"] }

[features]
jemalloc = ["tikv-jemallocator"]

[dependencies.tikv-jemallocator]
version = "0.5"
optional = true

[build-dependencies]
tonic-build = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
