[package]
name = "ggrs_plot_operator"
version = "0.0.1"
edition = "2021"
authors = ["Tercen"]
description = "High-performance faceted plotting operator using GGRS"
license = "MIT"

[lib]
name = "ggrs_plot_operator"
path = "src/lib.rs"

[[bin]]
name = "ggrs_plot_operator"
path = "src/main.rs"

[[bin]]
name = "test_stream_generator"
path = "src/bin/test_stream_generator.rs"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = "0.1"
futures = "0.3"

# gRPC and Protocol Buffers
tonic = { version = "0.14", features = ["transport", "tls-native-roots"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Data parsing - TSON format from Tercen
rustson = { git = "https://github.com/tercen/rustson", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
polars = { version = "0.51", default-features = false, features = ["lazy", "dtype-full"] }

# Base64 encoding
base64 = "0.22"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# GGRS plotting library with WebGPU backend
# Use local path for development: path = "../ggrs/crates/ggrs-core"
# Use git dependency for CI/production:
ggrs-core = { git = "https://github.com/tercen/ggrs", branch = "main", features = ["webgpu-backend", "cairo-backend"] }
# ggrs-core = { path = "../ggrs/crates/ggrs-core", features = ["webgpu-backend", "cairo-backend"] }

[features]
jemalloc = ["tikv-jemallocator"]

[dependencies.tikv-jemallocator]
version = "0.6"
optional = true

[build-dependencies]
tonic-prost-build = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Fast development profile with some optimizations
# Use: cargo build --profile dev-release
# Much faster than release, still optimized enough for testing
[profile.dev-release]
inherits = "release"
opt-level = 2          # Still optimized, but less aggressive
lto = false            # No LTO = much faster linking
codegen-units = 16     # Parallel codegen = faster builds
strip = false          # Keep debug info for better errors
incremental = true     # Enable incremental compilation
